--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,40 @@
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
-asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1719378664468/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-Django==5.0.7
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1719361860083/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1719582526268/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1710257288950/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1719274626886/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1715024415020/work
-setuptools==70.1.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sqlparse==0.5.1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1717722676093/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-wheel==0.43.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
+appnope
+asgiref
+asttokens
+comm
+debugpy
+decorator
+Django
+exceptiongroup
+executing
+importlib_metadata
+ipykernel
+ipython
+jedi
+jupyter_client
+jupyter_core
+matplotlib-inline
+nest_asyncio
+packaging
+parso
+pexpect
+pickleshare
+pillow
+platformdirs
+prompt_toolkit
+psutil
+ptyprocess
+pure-eval
+Pygments
+python-dateutil
+pyzmq
+setuptools
+six
+sqlparse
+stack-data
+tornado
+traitlets
+typing_extensions
+wcwidth
+wheel
+zipp
